# MultitechConduitIoTHub

./: README.md
IoTHubClient/IoTHubClient/: CMakeCache.txt  CMakeLists.txt  ConnectionString.Json  IoTHubClient  IoTHubClient.c  Makefile  cmake_install.cmake  device_provisioning.c
IoTHubClient/IoTHubClient/inc/: device_provisioning.h
